--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,11 @@ header h1 {
     display: inline;
 }
 
+header h3 {
+    font-size: 24px;
+    margin: 0;
+}
+
 header a {
     text-decoration: none;
     color: #fce138;
@@ -78,7 +83,6 @@ section {
     background-position: center;
     position: relative;
 }
- /* Hero Style End */
 
  .hero-form {
      border: 3px solid #024e76;
@@ -90,3 +94,34 @@ section {
      bottom: 120px;
      right: 140px;
  }
+
+ .hero-form h3 {
+     font-size: 24px;
+     margin: 0;
+ }
+ 
+ .hero-form p {
+     margin: 5px 0 15px 0;
+ }
+
+ .form-input {
+     border: 1px solid #024e76;
+     display: block;
+     padding: 7px 15px;
+     font-size: 16px;
+     color: #024e76;
+     width: 100%;
+     margin-bottom: 15px;
+ }
+
+ .hero-form label {
+     margin: 0px;
+ }
+ .hero-form button {
+     color: #fce138;
+     background-color: #024e76;
+     border: none;
+     padding: 10px 20px;
+     font-size: 16px;
+ }
+    /* Hero Style End */
