--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -94,6 +94,7 @@ section {
      color: #024e76;
      width: 40%;
      margin: 3.5%;
+     align-items: flex-start;
  }
 
  .hero-cta {
@@ -102,7 +103,7 @@ section {
      margin: 3.5%;
      color: #fff;
      font-size: 18px;
-     line-height: 1.3;
+     line-height: 1.2;
  }
   
  .hero-cta h2 {
@@ -142,7 +143,7 @@ section {
  }
 
     .section-title {
-        font-size: 55px;
+        font-size: 48px;
         color: #024e76;
         border-bottom: 3px solid;
         padding-bottom: 20px;
@@ -323,7 +324,7 @@ section {
     .contact-info a {
         color: #fce138;
     }
-    
+
     .text-left {
         text-align: left;
     }
@@ -336,3 +337,26 @@ section {
         display: flex;
     }
     
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    header h1 a {
+        /* this will be applied on any screen smaller than 980px */
+     
+    }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+    header h1 {
+        /* this will be applied on any screen between 768px and 575px */
+     
+    }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    header h1 {
+        /* this will be applied on any screen smaller than 575px */
+   
+    }
+}
